--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Week 4</title>
+    <title>Week 4 - Carousel</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,176 @@
   </head>
 
   <body>
-    <a href="https://getbootstrap.com/" target="_blank">https://getbootstrap.com/</a>
+
+
+
+      <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Inspired by Iceland</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#headings_row">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#let_it_out">Let it Out</a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+
+  <main role="main">
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/carousel1.jpg" alt="Iceland1" max-width="100%">
+          <div class="container">
+            <div class="carousel-caption text-left">
+              <h1>Horses of Iceland</h1>
+              <p>Unique breed of smallish horses that came to Iceland with the first settlers from Norway 1100 years ago.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Book a Riding Tour</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/carousel2.jpg" alt="Iceland2" max-width="100%">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Northern Lights</h1>
+              <p>The extreme dark of the Icelandic winter has a few perks. Between September and April, Iceland is treated to a magnificent natural display! The phenomenon of Aurora Borealis, or what we commonly call the Nothern Lights.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Northern Light Tours</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/carousel3.jpg" alt="Iceland3" max-width="100%">
+          <div class="container">
+            <div class="carousel-caption text-right">
+              <h1>Birdwatching</h1>
+              <p>Iceland is often referred to as a birdwatcher's paradise, as large colonies of seabirds and waterfowl are indigenous and easily visible around the coasts.</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Birdwatching Tours</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div id="headings_row" class="row">
+        <div class="col-lg-4">
+          <img src="images/heading1.png" alt="horse">
+          <h2>Islandic Horse</h2>
+          <p>The breed also performs a pace called skeið, or "flying pace". Skeið is used in pacing races, and is fast and smooth, with some horses able to reach up to 50 km/h (30 mph). It is not a gait for long-distance travel. It is small, weighing between 730 and 840 lb and standing an average of 52 to 56 inches.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn more &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img src="images/heading2.png" alt="nortern lights">
+          <h2>Aurora Borealis</h2>
+          <p>Natural phenomenon created when solar particles interact with the atmosphere in the Earth's magnetic field. This releases energy, causing peculiar luminous green streaks across the skies. From September to April, Iceland is a hotspot for this magnificent lightshow.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn more &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img src="images/heading3.png" alt="puffin">
+          <h2>Puffin</h2>
+          <p>Atlantic puffins have penguin-like coloring but they sport a colorful beak that has led some to dub them the “sea parrot.” The beak fades to a drab gray during the winter and blooms with color again in the spring—suggesting that it may be attractive to potential mates.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn more &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">REYKJAVÍK, <span class="text-muted"><br>Capital city of Iceland.</span></h2>
+          <p class="lead">Reykjavík is truly the gateway to Iceland. The capital area has enough natural wonders at its doorstep to serve as a convenient base for exploring a great deal of spectacular landscape in several directions. From the city, many day trips can also be taken to the surrounding mountains, glaciers, volcanoes and hot springs. Day-excursions from Reykjavík include horseback riding, glacier climbing, river rafting, caving, whale watching, and more.</p>
+        </div>
+        <div class="col-md-5">
+          <img src="images/featurettes1.jpg" alt="Reykjavík">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">Frozen 2 is inspired by Iceland, <span class="text-muted"><br>Come and be frozen by Iceland.</span></h2>
+          <p class="lead">Disney’s Frozen 2, the much anticipated sequel to the adventures of Elsa, Anna, Olaf, Kristoff and Sven is inspired by the magical landscapes of Iceland. Spouting geysers, glaciers, waterfalls, ice-caves and black-sand beaches not only serve as a scenic backdrop to the epic tale, the country also inspired key story elements, such as the stark difference between sisters Elsa and Anna.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="images/featurettes2.jpg" class="img-fluid" alt="frozen">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette" id="let_it_out">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Frustrated that you can't visit? <span class="text-muted"><br>Tap to scream!</span></h2>
+          <p class="lead">Visit this silly site, <a href="https://lookslikeyouneediceland.com/" target="_blank">Looks Like You Need Iceland</a>, to record your scream and they'll release it in Iceland. Let it out!</p>
+        </div>
+        <div class="col-md-5">
+          <img src="images/featurettes3.png" class="img-fluid" alt="airplane">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+      <!-- /ALERT -->
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <h4 class="alert-heading">This Website Uses Cookies</h4>
+          <p>Just kidding, I'm practicing alert messages- not invading your &#127850;</p>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+    </div><!-- /.container -->
+
+
+    <!-- FOOTER -->
+    <footer class="container">
+      <p class="float-right"><a href="#">Back to top</a></p>
+      <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+  </main>
+
+
 	</body>
 
 </html>
