--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -57,7 +57,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/carousel1.jpg" alt="Iceland1" max-width="100%">
+          <img src="images/carousel1.jpg" alt="Iceland1">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Horses of Iceland</h1>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/carousel2.jpg" alt="Iceland2" max-width="100%">
+          <img src="images/carousel2.jpg" alt="Iceland2">
           <div class="container">
             <div class="carousel-caption">
               <h1>Northern Lights</h1>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="images/carousel3.jpg" alt="Iceland3" max-width="100%">
+          <img src="images/carousel3.jpg" alt="Iceland3">
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>Birdwatching</h1>
